# Array-processing-using-ARM-NEON-and-optimizations

./: .gitignore  CMakeLists.txt  Makefile  README.md  array_benchmark_host  imgui.ini
build-armhf/: CMakeCache.txt
build-armhf-cli/: CMakeCache.txt  Makefile  array_benchmark_cli  cmake_install.cmake
build-host-win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  array_processing_arm_neon.sln  array_processing_shared.vcxproj  array_processing_shared.vcxproj.filters  array_processing_static.vcxproj  cmake_install.cmake  go.vcxproj  go.vcxproj.filters  imgui.vcxproj  imgui.vcxproj.filters
build-host-win/Release/: array_processing.lib
build-host-win/array_processing_shared.dir/Release/: array_processing.dll.recipe
build-host-win/array_processing_shared.dir/Release/array_pr.B78205D8.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-host-win/array_processing_static.dir/Release/array_pr.3CDD1222.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-host-win/go.dir/Release/: go.exe.recipe
build-host-win/go.dir/Release/go.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-host-win/imgui.dir/Release/imgui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-host-win/vendors/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
build-host-win/vendors/glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  update_mappings.vcxproj  update_mappings.vcxproj.filters
build-host-win/vendors/glfw/src/Release/: glfw3.lib
build-host-win/vendors/glfw/src/glfw.dir/Release/: glfw3.lib.recipe
build-host-win/vendors/glfw/src/glfw.dir/Release/glfw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  glfw.lastbuildstate
build-host-win/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-host-win/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog
build-host-win/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build-rpi/: CMakeCache.txt
cmake/toolchains/: armhf.cmake
scripts/: run-armhf.sh
src/: array_sum.cpp  array_sum.h  cli_main.cpp  main.cpp
web/: app.jsx  benchmark_results.json  index.html  server.py  styles.css
